# sae-gemma-induction

./: .env.example  .gitignore  HISTORY.md  README.md  SAELENS_VS_DL.md  WRITEUP.md  pyproject.toml  requirements-streamlit.txt  requirements.txt
results/: ablation_results.json  activation_patching.json  activation_patching_mean.json  baseline_icl_accuracy.json  feature_labels.json  head_correspondence.parquet  induction_candidate_ids.json  induction_feature_scores.parquet  mmlu_feature_activations.json  random_feature_ablation.json  saebench_candidate_ids.json  seed43_labels.json  seed43_replication.json  seed43_top5.json  seed44_labels.json  seed44_replication.json  seed44_top5.json  timeout_ids.json  top20_candidate_ids.json
scripts/: autointerp_seed.py  cache_pile_examples.py  check_wandb_metrics.py  convert_dl_to_saelens.py  diag_induction.py  finalize_replication.py  make_writeup_figures.py  mmlu_few_shot_features.py  monitor_dl.py  monitor_sae.py  plot_training_metrics.py  random_feature_ablation.py  replicate_seed.py  run_all.ps1  run_all.sh  run_pipeline_v8.ps1  sae_bench_comparison.py  smoke_gemma.py  smoke_gpu.py  smoke_induction.py  smoke_test_gemma.py  test_convert_dl.py  upload_v9c_to_hf.py
src/sae_gemma/: __init__.py  ablations.py  activation_patching.py  autointerp.py  capture_activations.py  dashboard.py  find_induction_features.py  head_correspondence.py  induction_probes.py  model_utils.py  paths.py  train_sae.py  train_sae_dl.py
tests/: test_ablation_utils.py  test_autointerp.py  test_buffer.py  test_probe_utils.py
